# fastapi-chameleon

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.py  tox.ini
example/: example_app.py
example/static/: site.css
example/templates/: async.pt  index.pt
fastapi_chameleon/: __init__.py  engine.py  exceptions.py
fastapi_jinja/: __init__.py  engine.py  exceptions.py
testapp/: testapp.py
testapp/templates/: test.j2
tests/: conftest.py  test_generic_error.py  test_generic_error_data.py  test_init.py  test_not_found.py  test_render.py
tests/templates/errors/: 404.pt  error_with_data.pt  other_error_page.pt
tests/templates/home/: index.j2  index.pt
tests/templates/test_render/: index.pt
